Update website: edited index.html and style.css, added OG image

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <meta name="google-site-verification" content="1Tb-BqhLKi3k3FRnp3zoExRa-W0k6mHoZmtejiWoUUw" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="VocabBoost - Free English vocabulary learning app with AI-powered features. Improve your vocabulary with interactive word games, quizzes, and smart learning tools.">
@@ -11,14 +12,14 @@
 <meta property="og:title" content="VocabBoost -  Free Vocabulary Builder with AI Tools & Quizzes">
 <meta property="og:description" content="Free vocabulary learning app with AI-powered features, interactive quizzes, and personalized word tracking.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://yourwebsite.com">
-<meta property="og:image" content="https://yourwebsite.com/og-image.png">
+<meta property="og:url" content="https://cherish684.github.io/VocabBoost/">
+<meta property="og:image" content="img.png">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="VocabBoost - Expand Your English Vocabulary">
 <meta name="twitter:description" content="Free vocabulary learning app with AI-powered features and interactive learning.">
 
-<link rel="canonical" href="https://yourwebsite.com">
+<link rel="canonical" href="https://cherish684.github.io/VocabBoost/">
     <title>VocabBoost - English Vocabulary App</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -495,25 +496,7 @@
                             </div>
                         </div>
                         <div class="rewards-list">
-                            <h3>Achievements</h3>
-                            <ul id="achievements-list">
-                                <li class="achievement locked">
-                                    <i class="fas fa-trophy"></i>
-                                    <div class="achievement-info">
-                                        <h4>Word Master</h4>
-                                        <p>Learn 10 new words</p>
-                                    </div>
-                                    <span class="achievement-status">0/10</span>
-                                </li>
-                                <li class="achievement locked">
-                                    <i class="fas fa-star"></i>
-                                    <div class="achievement-info">
-                                        <h4>Favorite Collector</h4>
-                                        <p>Add 5 words to favorites</p>
-                                    </div>
-                                    <span class="achievement-status">0/5</span>
-                                </li>
-                            </ul>
+                            
                         </div>
                     </div>
                 </div>
